@@ -27,7 +27,7 @@ namespace ORNG {
 
 
 		// Deserializes from filepath at "input" if input_is_filepath = true, else deserializes from the string itself assuming it contains valid yaml data
-		static bool DeserializeScene(Scene& scene, const std::string& input, bool input_is_filepath = true);
+		static bool DeserializeScene(Scene& scene, const std::string& input, bool load_env_map, bool input_is_filepath = true);
 
 		static void SerializeEntity(SceneEntity& entity, YAML::Emitter& out);
 		// Entity argument is the entity that the data will be loaded into
